[package]
name = "include-flate-codegen"
version = "0.1.4"
authors = ["SOFe <sofe2038@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/SOF3/include-flate.git"
homepage = "https://github.com/SOF3/include-flate"
description = "Macro codegen for the include-flate crate"

[lib]
proc-macro = true

[dependencies]
zstd = { git = "https://github.com/gyscos/zstd-rs.git", default-features = false }
proc-macro-hack = { version = "0.5.19", optional = true }
proc-macro2 = "1.0.36"
quote = "1.0.15"
syn = { version = "1.0.86", features = ["full"] }

[features]
stable = ["proc-macro-hack"]
